# robotics-cpp-portfolio

./: .gitignore  README.md
obstacle_detector/: CMakeLists.txt  README.md  package.xml
obstacle_detector/launch/: obstacle_detector_launch.py
obstacle_detector/src/: obstacle_detector_node.cpp
robot-connection-manager/: CMakeLists.txt  README.md
robot-connection-manager/src/: main.cpp
sensor-data-processor/: CMakeLists.txt  CMakePresets.json  README.MD
sensor-data-processor/src/: main.cpp
waypoint_follower/: CMakeLists.txt  README.md  package.xml
waypoint_follower/include/waypoint_follower/: waypoint_follower_node.hpp
waypoint_follower/src/: waypoint_follower_node.cpp
